Removed markdown files

--- a/docs/python/01_getting_started.ipynb
+++ b/docs/python/01_getting_started.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "4ed343f8",
    "metadata": {},
@@ -18,7 +19,7 @@
     "\n",
     "## References\n",
     "\n",
-    "-   Matthes, Eric (2019). _Python Crash Course, 2nd Edition: A Hands-On, Project-Based Introduction to Programming_. No Starch Press. ISBN: 978-1593279288. ([Publisher website](https://nostarch.com/python-crash-course-3rd-edition))"
+    "-   Matthes, Eric (2022). _Python Crash Course, 3rd Edition: A Hands-On, Project-Based Introduction to Programming_. No Starch Press. ISBN: 978-1593279288. ([Publisher website](https://nostarch.com/python-crash-course-3rd-edition))"
    ]
   }
  ],
