Added Colab badges

--- a/docs/python/01_getting_started.ipynb
+++ b/docs/python/01_getting_started.ipynb
@@ -8,6 +8,9 @@
    "source": [
     "# Getting Started\n",
     "\n",
+    "[![image](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/giswqs/geosdemo/blob/master/docs/python/01_getting_started.ipynb)\n",
+    "\n",
+    "\n",
     "## Jupyter Notebook Keyboard Shortcuts\n",
     "\n",
     "-   **Shift-Enter**: run cell, select below\n",
@@ -21,6 +24,12 @@
     "\n",
     "-   Matthes, Eric (2022). _Python Crash Course, 3rd Edition: A Hands-On, Project-Based Introduction to Programming_. No Starch Press. ISBN: 978-1593279288. ([Publisher website](https://nostarch.com/python-crash-course-3rd-edition))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5f10a851",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
