--- a/docs/python/02_variables_data_types.ipynb
+++ b/docs/python/02_variables_data_types.ipynb
@@ -1,11 +1,14 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "45f9259c",
    "metadata": {},
    "source": [
     "# Variables and Data Types\n",
+    "\n",
+    "[![image](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/giswqs/geosdemo/blob/master/docs/python/02_variables_data_types.ipynb)\n",
     "\n",
     "In this lecture you’ll learn about the different kinds of data you can work with in your Python programs. You’ll also learn how to use variables to represent data in your programs.\n",
     "\n",
