--- a/docs/labs/lab4.ipynb
+++ b/docs/labs/lab4.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "beb550f5",
    "metadata": {},
@@ -11,11 +12,12 @@
     "\n",
     "## Submission instructions\n",
     "\n",
-    "1. Complete the lab questions\n",
-    "2. Restart Kernel and Run All Cells\n",
-    "3. Upload the notebook to your GitHub repository\n",
-    "4. Make sure the notebook has an `Open In Colab` badge. Click on the badge to make sure your notebook can be opened in Colab.\n",
-    "5. Submit the link to your GitHub repository to Canvas"
+    "1. Download the notebook from https://geosdemo.gishub.org/labs/lab4\n",
+    "2. Complete the lab questions\n",
+    "3. Restart Kernel and Run All Cells\n",
+    "4. Upload the notebook to your GitHub repository\n",
+    "5. Make sure the notebook has an `Open In Colab` badge. Click on the badge to make sure your notebook can be opened in Colab.\n",
+    "6. Submit the link to the notebook on your GitHub repository to Canvas"
    ]
   },
   {
