--- a/docs/labs/lab4.ipynb
+++ b/docs/labs/lab4.ipynb
@@ -22,14 +22,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "bfc1ddc5",
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Submitted time: 2023-03-07 16:54:47.802541\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "from datetime import datetime\n",
     "\n",
@@ -49,15 +53,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "063a8cb4",
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello Donde, will you make more parking spots?\n"
+     ]
     }
-   },
-   "outputs": [],
-   "source": []
+   ],
+   "source": [
+    "message = \"Hello Donde, will you make more parking spots?\"\n",
+    "\n",
+    "print(message)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -71,15 +83,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "35cfbbec",
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "jareth beeler\n",
+      "JARETH BEELER\n",
+      "Jareth Beeler\n"
+     ]
     }
-   },
-   "outputs": [],
-   "source": []
+   ],
+   "source": [
+    "name = \"jareth beeler\"\n",
+    "print(name.lower())\n",
+    "print(name.upper())\n",
+    "print(name.title())\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -99,11 +123,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "3bed6cb5",
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -122,11 +142,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "bb5dbb0f",
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -145,11 +161,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "13da6459",
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -167,11 +179,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "eba0829e",
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -191,11 +199,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "37cdb68e",
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -211,11 +215,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "11b4528c",
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -235,11 +235,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "7489fb55",
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -255,11 +251,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "eb9f8e19",
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -277,11 +269,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "6c6a27a9",
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -299,11 +287,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "d276920a",
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -321,11 +305,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "4ff24fc6",
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -343,11 +323,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "df0901f8",
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -367,11 +343,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "0e03e488",
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -387,11 +359,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "6859a061",
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -407,11 +375,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "64988cac",
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -431,11 +395,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "6f186d8a",
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -451,11 +411,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "79b11cbc",
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -476,11 +432,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "cc3198fa",
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -504,11 +456,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b09c364a",
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -529,11 +477,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "fc58635c",
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -554,11 +498,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "651e8bf2",
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -581,11 +521,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "9f1a4a8d",
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -607,11 +543,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "6231e1e4",
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -621,6 +553,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
