--- a/docs/python/01_getting_started.ipynb
+++ b/docs/python/01_getting_started.ipynb
@@ -37,6 +37,10 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "name": "python",
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
