--- a/docs/examples/ipyleaflet.ipynb
+++ b/docs/examples/ipyleaflet.ipynb
@@ -2,54 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6bb80429894446d2b9c44339051d5dea",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Map(center=[52.204793, 360.121558], controls=(ZoomControl(options=['position', 'zoom_in_text', 'zoom_in_title'…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "from ipyleaflet import Map, basemaps, basemap_to_tiles\n",
-    "\n",
-    "m = Map(\n",
-    "    basemap=basemap_to_tiles(basemaps.OpenTopoMap),\n",
-    "    center=(52.204793, 360.121558),\n",
-    "    zoom=4\n",
-    ")\n",
-    "\n",
-    "m"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import leafmap"
+    "import geosdemo"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'layers_control': False, 'scroll_wheel_zoom': True}\n",
+      "{'layers_control': False, 'scroll_wheel_zoom': True}\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1b30321637814eb9b0112892afcabf49",
+       "model_id": "42abdb07107d4d8ea8f00a5d576d63ba",
        "version_major": 2,
        "version_minor": 0
       },
@@ -62,8 +38,7 @@
     }
    ],
    "source": [
-    "m = leafmap.Map()\n",
-    "m.add_basemap(\"HYBRID\")\n",
+    "m = geosdemo.Map(layers_control=False)\n",
     "m"
    ]
   },
@@ -72,16 +47,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "m.add_layers_control()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "m.clear_layers()"
-   ]
+   "source": []
   }
  ],
  "metadata": {
