--- a/docs/examples/raster.ipynb
+++ b/docs/examples/raster.ipynb
@@ -22,7 +22,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "No such comm: 12c6f85039ae4c5caa858ed73e6942e3\n"
+     ]
+    }
+   ],
    "source": [
     "m = geosdemo.Map()\n",
     "m"
@@ -35,6 +43,34 @@
    "outputs": [],
    "source": [
     "m.add_raster(url, name=\"oil_spill\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import ipywidgets as widgets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "opacity_slider = widgets.FloatSlider(min=0, max=1, step=0.05, value=1)\n",
+    "opacity_slider"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "widgets.jslink((m.layers[-1], \"opacity\"), (opacity_slider, \"value\"))"
    ]
   }
  ],
