Add foliumap module

--- a/docs/examples/folium.ipynb
+++ b/docs/examples/folium.ipynb
@@ -3,6 +3,55 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7e85885c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import geosdemo.foliumap as geosdemo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aaffaa59",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m = geosdemo.Map(center=(40.7128, -74.0060), zoom=12)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a2a96a14",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = 'http://mt0.google.com/vt/lyrs=y&hl=en&x={x}&y={y}&z={z}'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3a5c0153",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m.add_tile_layer(url=url, name=\"Satellite\", attribution=\"Google\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "stylish-awareness",
    "metadata": {},
    "outputs": [],
@@ -17,7 +66,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "m = folium.Map(location=[45.5236, -122.6750])\n",
+    "m = folium.Map(location=[40, -100], zoom_start=4)\n",
     "m"
    ]
   },
@@ -59,7 +108,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.9.15"
   }
  },
  "nbformat": 4,
