--- a/docs/examples/ipywidgets_box.ipynb
+++ b/docs/examples/ipywidgets_box.ipynb
@@ -153,31 +153,12 @@
     "    min=1,\n",
     "    max=100,\n",
     "    description=\"Int Slider: \",\n",
-    "    readout=False,\n",
+    "    readout=True,\n",
     "    continuous_update=True,\n",
-    "    layout=widgets.Layout(width=\"220px\", padding=padding),\n",
+    "    layout=widgets.Layout(width=widget_width, padding=padding),\n",
     "    style={\"description_width\": \"initial\"},\n",
     ")\n",
     "int_slider"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "int_slider_label = widgets.Label()\n",
-    "widgets.jslink((int_slider, \"value\"), (int_slider_label, \"value\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "widgets.HBox([int_slider, int_slider_label])"
    ]
   },
   {
@@ -190,15 +171,11 @@
     "    min=1,\n",
     "    max=100,\n",
     "    description=\"Float Slider: \",\n",
-    "    readout=False,\n",
+    "    readout=True,\n",
     "    continuous_update=True,\n",
-    "    layout=widgets.Layout(width=\"220px\", padding=padding),\n",
+    "    layout=widgets.Layout(width=widget_width, padding=padding),\n",
     "    style={\"description_width\": \"initial\"},\n",
-    ")\n",
-    "\n",
-    "float_slider_label = widgets.Label()\n",
-    "widgets.jslink((float_slider, \"value\"), (float_slider_label, \"value\"))\n",
-    "widgets.HBox([float_slider, float_slider_label])"
+    ")"
    ]
   },
   {
@@ -285,8 +262,8 @@
     "toolbar_widget.children = [\n",
     "    widgets.HBox([close_button, toolbar_button]),\n",
     "    checkbox,\n",
-    "    widgets.HBox([int_slider, int_slider_label]),\n",
-    "    widgets.HBox([float_slider, float_slider_label]),\n",
+    "    int_slider,\n",
+    "    float_slider,\n",
     "    dropdown,\n",
     "    text,\n",
     "    color,\n",
@@ -315,7 +292,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.9"
   },
   "toc": {
    "base_numbering": 1,
