Updated ipywidgets notebook

--- a/docs/examples/ipywidgets_events.ipynb
+++ b/docs/examples/ipywidgets_events.ipynb
@@ -171,7 +171,7 @@
     "        output.clear_output()\n",
     "        if change['new'] == \"Apply\":\n",
     "            if dropdown.value is None:\n",
-    "                print(\"Please select a satellie from the dropdown list.\")\n",
+    "                print(\"Please select a satellite from the dropdown list.\")\n",
     "            else:\n",
     "                print(f\"You selected {dropdown.value}\")\n",
     "        elif change['new'] == 'Reset':\n",
@@ -183,16 +183,16 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Third example \n",
     "\n",
-    "- https://geemap.org/notebooks/39_timelapse\n",
-    "- https://geemap.org/notebooks/71_timelapse\n",
-    "- https://gishub.org/gee-ngrok\n",
+    "- https://leafmap.org/notebooks/02_using_basemaps/\n",
     "\n",
-    "![](https://i.imgur.com/adwTxEo.png)"
+    "\n",
+    "![](https://leafmap.org/data/leafmap_demo.gif)"
    ]
   }
  ],
@@ -213,7 +213,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.9"
   },
   "toc": {
    "base_numbering": 1,
